# screamd

./: Cargo.toml  GEMINI.md  README.md  build.rs  install.sh  screamd.service
config/: 45-screamd-remote-shutdown.rules  config.toml  screamd.sudoers
src/: linux_control.rs  main.rs  os_control.rs  service_core.rs  windows_control.rs
