[package]
name = "screamd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = [ "macros", "rt-multi-thread",  "time", "process" ] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tempfile = "3"

# Für Windows:
winreg = { version = "0.10", optional = true }

[features]
# optionalen Windows-Code nur auf Windows aktivieren
windows = ["winreg"]

